# slot_pirots3

./: CMakeLists.txt  main.cpp
include/game/: grid.hpp  layout.hpp  math.hpp
include/utils/: rng.hpp
src/: main.cpp
src/game/: grid.cpp  layout.cpp  math.cpp
src/utils/: rng.cpp
tests/: test_math.cpp
